--- a/Neptune.theme.css
+++ b/Neptune.theme.css
@@ -1,13 +1,10 @@
 /**
-  * @name Neptune
-  * @author DevEvil#8745
+  * @name Sanction
+  * @author Riley
   * @version 2.0
   * @description A dark, blue and customizable theme
   * @authorId 468132563714703390
-  * @authorLink https://devevil.com
-  * @source https://github.com/DevEvil99/Neptune-Discord-Theme
-  * @website https://devevil.com
-  * @invite jsQ9UP7kCA
+  * @source https://github.com/PhazeAU/Neptune-Discord-Theme
 */
 
 @import url('https://devevil99.github.io/devevil/BetterDiscordAddons/Theme/Neptune/Neptune.theme.css');
