--- a/Neptune.theme.css
+++ b/Neptune.theme.css
@@ -10,9 +10,9 @@
 @import url('https://devevil99.github.io/devevil/BetterDiscordAddons/Theme/Neptune/Neptune.theme.css');
 
 :root {
-  --neptune-main-bg: #1a2035;
-  --neptune-main-color: #228bd1;
-  --neptune-sec-color: #84adf8;
+  --neptune-main-bg: #1a3530;
+  --neptune-main-color: #22d1b4;
+  --neptune-sec-color: #84f6f8;
   --neptune-home-icon: url(https://cdn.discordapp.com/attachments/468141324906921984/934118888071909406/home-icon.jpg);
   --watermark-filter-invert: 0%;
   --watermark-filter-sepia: 50%;
